--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,39 @@
 {
-    "name": "primera PWA",
-    "short_name": "PWA",
-    "description": "Chupirul",
+    "name": "Chupirul PWA",
+    "short_name": "Chupirul",
+    "description": "Aplicación PWA con login y registro offline",
     "start_url": "/",
     "display": "standalone",
-    "theme_color": "#000000",
-    "background_color": "#000000",
+    "theme_color": "#667eea",
+    "background_color": "#ffffff",
     "orientation": "portrait-primary",
+    "scope": "/",
+    "lang": "es",
+    "categories": ["productivity", "utilities"],
     "icons": [
-    {
-    "src": "/neko.png",
-    "sizes": "192x192",
-    "type": "image/png"
-     },
-    {
-    "src": "/neko-512.png",
-    "sizes": "512x512",
-    "type": "image/png"
-     }
+        {
+            "src": "/neko.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/neko-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any maskable"
+        }
     ],
-    "splash_pages": null
+    "screenshots": [
+        {
+            "src": "/neko-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "form_factor": "narrow"
+        }
+    ],
+    "prefer_related_applications": false,
+    "edge_side_panel": {
+        "preferred_width": 400
+    }
 }
